ubiquity (2.9.19) UNRELEASED; urgency=low

  * Install pixmaps/windows_square.png in ubiquity-frontend-gtk.
  * Make it possible to run the test suite against installed packages, and
    add a DEP-8 control file for this.
  * Update translations from Launchpad.
  * Update imported translations from gtk+3.0 3.3.14-0ubuntu2 and
    gnome-panel 1:3.3.5-0ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 15 Feb 2012 02:40:42 +0000

ubiquity (2.9.18) precise; urgency=low

  * Convert from deprecated GtkHBox/GtkVBox to GtkBox, and from
    GtkHButtonBox to GtkButtonBox.
  * Use g_object_unref instead of deprecated gdk_pixbuf_unref.
  * Use gdk_error_trap_pop_ignored rather than gdk_error_trap_pop when
    ignoring errors.
  * webcam: Warn when trying to get unknown properties.
  * webcam: Fix header typo: UBIQUITY_GET_CLASS ->
    UBIQUITY_WEBCAM_GET_CLASS.
  * Upgrade to Automake 1.11.3, involving using pkglibexec_PROGRAMS instead
    of pkglib_PROGRAMS.
  * Use a mock resolver during usersetup tests to avoid failing in certain
    network setups.
  * Use mock.patch.object instead of deprecated mock.patch_object.
  * Silence annoying warnings from dmidecode during the test suite.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 12 Feb 2012 03:08:28 +0000

ubiquity (2.9.17) precise; urgency=low

  [ Colin Watson ]
  * Don't display "Ready when you are..." when the installer isn't actually
    waiting for user actions.
  * When waiting for user actions, just hide the progress bar and associated
    widgets rather than displaying "Ready when you are...", to avoid
    confusion associated with a progress bar being displayed when the system
    is in fact waiting for user input (LP: #670409, #925427).
  * Mark file descriptors used for communication with parted_server
    FD_CLOEXEC.
  * Restore finish-install's title after installing the oem-config frontend
    (LP: #925155).
  * Avoid duplicate call to osextras.find_on_path('check-language-support').