@@ -388,17 +388,21 @@ class Install(install_misc.InstallBase):
                 sourcepath = os.path.join(self.source, relpath)
                 targetpath = os.path.join(self.target, relpath)
                 st = os.lstat(sourcepath)
+
+                # Is the path blacklisted?
+                if (not stat.S_ISDIR(st.st_mode) and
+                    '/%s' % relpath in self.blacklist):
+                    if debug:
+                        syslog.syslog('Not copying %s' % relpath)
+                    continue
+
+                # Remove the target if necessary and if we can.
+                install_misc.remove_target(
+                    self.source, self.target, relpath, st)
+
+                # Now actually copy source to target.
                 mode = stat.S_IMODE(st.st_mode)
                 if stat.S_ISLNK(st.st_mode):
-                    try:
-                        os.unlink(targetpath)
-                    except OSError, e:
-                        if e.errno == errno.ENOENT:
-                            pass
-                        elif e.errno == errno.EISDIR:
-                            os.rmdir(targetpath)
-                        else:
-                            raise
                     linkto = os.readlink(sourcepath)
                     os.symlink(linkto, targetpath)
                 elif stat.S_ISDIR(st.st_mode):
@@ -413,13 +417,9 @@ class Install(install_misc.InstallBase):
                 elif stat.S_ISSOCK(st.st_mode):
                     os.mknod(targetpath, stat.S_IFSOCK | mode)
                 elif stat.S_ISREG(st.st_mode):
-                    if '/%s' % relpath in self.blacklist:
-                        if debug:
-                            syslog.syslog('Not copying %s' % relpath)
-                        continue
-                    osextras.unlink_force(targetpath)
                     install_misc.copy_file(self.db, sourcepath, targetpath, md5_check)
 
+                # Copy metadata.
                 copied_size += st.st_size
                 os.lchown(targetpath, st.st_uid, st.st_gid)
                 if not stat.S_ISLNK(st.st_mode):
